# melonDS-android

./: .gitmodules
app/: CMakeLists.txt  build.gradle.kts  proguard-rules.pro
app/src/debug/: AndroidManifest.xml
app/src/debug/java/me/magnum/melonds/debug/: DebugCommandReceiver.kt  DebugCommandStateStore.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AndroidMelonEventMessenger.cpp  AndroidMelonEventMessenger.h  EmulatorArgsBuilder.cpp  MelonDS.cpp  MelonDSAndroidConfiguration.cpp  MelonDSAndroidInterface.cpp  MelonDSAndroidJNI.cpp  MelonDSNandJNI.cpp  MelonInstance.cpp  MelonInstance.h
app/src/main/cpp/renderer/: VulkanOutput.cpp  VulkanOutput.h  VulkanSurfacePresenter.cpp  VulkanSurfacePresenter.frag  VulkanSurfacePresenter.h  VulkanSurfacePresenterFragmentShaderData.h
app/src/main/cpp/retroachievements/: RetroAchievementsManager.cpp  RetroAchievementsManager.h
app/src/main/java/me/magnum/melonds/: MelonDSAndroidInterface.kt  MelonDSApplication.kt  MelonEmulator.kt
app/src/main/java/me/magnum/melonds/common/network/: MelonOkHttpInterceptor.kt
app/src/main/java/me/magnum/melonds/common/opengl/: ScreenRotationShaderProgramSource.kt  Shader.kt  VideoFilterShaderProvider.kt
app/src/main/java/me/magnum/melonds/common/retroarch/: RetroArchShaderPreset.kt
app/src/main/java/me/magnum/melonds/common/romprocessors/: CompressedRomFileProcessor.kt
app/src/main/java/me/magnum/melonds/debug/: DebugCommandEntryPoint.kt  DebugCommandExecutionLock.kt  DebugCommandInitializer.kt
app/src/main/java/me/magnum/melonds/di/: MelonModule.kt  MigrationModule.kt
app/src/main/java/me/magnum/melonds/domain/model/: ExternalDisplayOrientation.kt  Rect.kt  RendererConfiguration.kt  RetroArchShaderConfiguration.kt  RetroArchShaderSourceResolution.kt  VideoFiltering.kt  VideoRenderer.kt  VulkanDriverConfiguration.kt
app/src/main/java/me/magnum/melonds/domain/model/emulator/: EmulatorEvent.kt
app/src/main/java/me/magnum/melonds/domain/model/layout/: BackgroundMode.kt
app/src/main/java/me/magnum/melonds/domain/model/retroachievements/: RAEvent.kt
app/src/main/java/me/magnum/melonds/domain/repositories/: RetroAchievementsRepository.kt  SettingsRepository.kt
app/src/main/java/me/magnum/melonds/domain/services/: EmulatorLaunchPreconditionChecker.kt  EmulatorManager.kt
app/src/main/java/me/magnum/melonds/impl/: AdrenoVulkanDriverManager.kt  AdrenoVulkanDriverSupport.kt  AndroidRetroAchievementsRepository.kt  FileSystemConfigurationDirectoryVerifier.kt  FileSystemRomsRepository.kt  RomSaveFileManager.kt  SharedPreferencesSettingsRepository.kt
app/src/main/java/me/magnum/melonds/impl/emulator/: AndroidEmulatorManager.kt  EmulatorEventType.kt  EmulatorMessageQueue.kt  EmulatorSession.kt
app/src/main/java/me/magnum/melonds/impl/emulator/debug/: RendererDebugBridge.kt  RendererDebugCaptureLogger.kt
app/src/main/java/me/magnum/melonds/impl/layout/: UILayoutProvider.kt
app/src/main/java/me/magnum/melonds/impl/retroachievements/offline/: SmartSyncEngine.kt
app/src/main/java/me/magnum/melonds/migrations/: Migration40to41.kt
app/src/main/java/me/magnum/melonds/ui/: ExternalLayoutRender.kt  ExternalRenderer.kt  ExternalScreenRender.kt
app/src/main/java/me/magnum/melonds/ui/common/rom/: EmulatorLaunchValidationViewModel.kt  EmulatorLaunchValidatorDelegate.kt
app/src/main/java/me/magnum/melonds/ui/emulator/: DSRenderer.kt  EmulatorActivity.kt  EmulatorRetroAchievementsViewModel.kt  EmulatorSurfaceView.kt  EmulatorViewModel.kt
app/src/main/java/me/magnum/melonds/ui/emulator/component/: RetroAchievementsSubmissionHandler.kt
app/src/main/java/me/magnum/melonds/ui/emulator/model/: ToastEvent.kt  (+6 more)
app/src/main/java/me/magnum/melonds/ui/inputsetup/: InputSetupActivity.kt  InputSetupViewModel.kt
app/src/main/java/me/magnum/melonds/ui/layouteditor/: LayoutEditorActivity.kt  LayoutEditorManagerView.kt  LayoutEditorView.kt  LayoutEditorViewModel.kt
app/src/main/java/me/magnum/melonds/ui/romdetails/: RomDetailsActivity.kt  RomDetailsViewModel.kt
app/src/main/java/me/magnum/melonds/ui/romlist/: RomListActivity.kt  RomListFragment.kt
app/src/main/java/me/magnum/melonds/ui/settings/: PreferenceFragmentHelper.kt  SettingsActivity.kt
app/src/main/java/me/magnum/melonds/utils/: RomProcessor.kt
app/src/main/res/layout/: activity_emulator.xml
app/src/main/res/values/: arrays.xml  strings.xml
app/src/main/res/values-b+es/: strings.xml
app/src/main/res/values-b+fr/: strings.xml
app/src/main/res/values-b+id/: strings.xml
app/src/main/res/values-b+it/: strings.xml
app/src/main/res/values-b+pt+BR/: strings.xml
app/src/main/res/values-b+ru/: strings.xml
app/src/main/res/values-b+zh+Hans/: strings.xml
app/src/main/res/xml/: file_paths.xml  pref_video.xml  scene_activity_emulator.xml
app/src/release/: AndroidManifest.xml
app/src/release/java/me/magnum/melonds/debug/: ReleaseStateCommandReceiver.kt
app/src/test/java/me/magnum/melonds/common/retroarch/: RetroArchShaderPresetTest.kt
(+49 files in other folders)
